# note

./: README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250703093052_init.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs
